{
    "name": "Input_Controls",
    "maps": [
        {
            "name": "Action_Map",
            "id": "7ed8bee5-6cb9-4313-bbbd-afed06e645b5",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "fd3e27e8-1040-47ba-9bfe-1e5d756d8277",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapPosition",
                    "type": "Value",
                    "id": "f3efb977-58ca-47d6-84cf-06c52640b727",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4409ecc7-ed36-4404-b132-e8a2790f5441",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Smartphone",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "065788b7-7e49-42e0-a012-2407e36277d6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Smartphone",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31dfc7bf-aa0e-4222-954b-c53e707c9549",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Smartphone",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d72c5599-f8b9-4929-9d85-06cecc17e753",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Smartphone",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Smartphone",
            "bindingGroup": "Smartphone",
            "devices": []
        }
    ]
}